cards look better; still need collapse + search

--- a/_layouts/collections.html
+++ b/_layouts/collections.html
@@ -25,42 +25,44 @@ layout: page
             {% for c in collections %}
             {% if c.status != 'noshow' %}
             <div class="item col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 my-3">
-                <div class="card mb-3 border-secondary">
+                <div class="card mb-3 border-secondary search">
                     {%- assign format-for-browse = c.mediatype | strip | split: ';' | downcase -%}
-                    <a href="{{ c.website }}" target="_blank" rel="noopener">
+
+                    <a href="#{{ c.collapse }}" id="collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="{{ c.collapse }}">
                         <img class="card-img-top lazyload img-fluid" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
+                        <div class="highlight text-center py-2 px-2">{{ c.colltitle }}</div>
                     </a>
-                    
-                    <div class="card-body text-center search">
-                        <h4 class="card-title"><a href="#{{ c.collapse }}" class="text-dark" title="link to {{ c.colltitle | escape }}" id="collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="{{ c.collapse }}">{{ c.colltitle }}</a></h4>
-                        
-                        <div class="collapse" id="{{ c.collapse }}" aria-labelledby="collapseOne">
-                        <p>
-                            {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ c[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
-                            {%- assign btns = btns | split: ';' | compact -%}
-                            {% for b in btns %}{% if b !=" " and b != "" %}
-                            <a class="btn btn-sm btn-secondary m-1 filter text-wrap" href="{{ b | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ b }}</a>
-                            {% endif %}{% endfor %}
-                        </p>
-                        <p class="card-text"><small class="text-muted">
-                                {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
-                                {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
-                                {% unless forloop.last %}<br>{% endunless %}
-                                {% endif %}{% endif %}{% endfor %}
-                            </small>
-                        </p>
-                        <p class="card-text">
-                            {%- capture media -%}{{ c.mediatype | strip}}{%- endcapture -%}
-                            {%- assign media = media | split: ';' | compact -%}
-                            {% for m in media %}{% if m !=" " and m != "" %}
-                            <small><a href="{{ m | prepend: '/collections/#' | relative_url }}" class="filter btn btn-sm btn-outline-secondary my-1">{{ m | upcase }} <span class="{% if m contains 'image' %}far fa-image{% elsif m contains 'audio' %}far fa-file-audio{% elsif m contains 'video' %}far fa-file-video{% elsif m contains 'data' %}far fa-file-excel{% elsif m contains 'correspondence' %}far fa-envelope{% elsif m contains 'scores' %}fas fa-music{% elsif m contains 'illustration' %}fas fa-edit{% elsif m contains 'podcast' %}fas fa-podcast{% elsif m contains 'newspaper' %}far fa-newspaper{% elsif m contains 'map' %}fas fa-map-pin{% elsif m contains 'memorabilia' %}fas fa-box-open{%else%}far fa-file{% endif %}"></span></a></small>
-                            <span class="hidden-format-for-browse">{{format-for-browse | replace: "application", "application document"}}</span>
-                            {% endif %}{% endfor %}
-                        </p>
-                        
-                        <hr>
+
+
+                    <div class="collapse" id="{{ c.collapse }}" aria-labelledby="collapseOne">
+                        <div class="card-body text-center search">
+                            <p>
+                                {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ c[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
+                                {%- assign btns = btns | split: ';' | compact -%}
+                                {% for b in btns %}{% if b !=" " and b != "" %}
+                                <a class="btn btn-sm btn-secondary my-1 filter text-wrap" href="{{ b | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ b }}</a>
+                                {% endif %}{% endfor %}
+                            </p>
+                            <p class="card-text">
+                                {%- capture media -%}{{ c.mediatype | strip}}{%- endcapture -%}
+                                {%- assign media = media | split: ';' | compact -%}
+                                {% for m in media %}{% if m !=" " and m != "" %}
+                                <small><a href="{{ m | prepend: '/collections/#' | relative_url }}" class="filter btn btn-sm btn-outline-secondary my-1">{{ m | upcase }} <span class="{% if m contains 'image' %}far fa-image{% elsif m contains 'audio' %}far fa-file-audio{% elsif m contains 'video' %}far fa-file-video{% elsif m contains 'data' %}far fa-file-excel{% elsif m contains 'correspondence' %}far fa-envelope{% elsif m contains 'scores' %}fas fa-music{% elsif m contains 'illustration' %}fas fa-edit{% elsif m contains 'podcast' %}fas fa-podcast{% elsif m contains 'newspaper' %}far fa-newspaper{% elsif m contains 'map' %}fas fa-map-pin{% elsif m contains 'memorabilia' %}fas fa-box-open{%else%}far fa-file{% endif %}"></span></a></small>
+                                <span class="hidden-format-for-browse">{{format-for-browse | replace: "application", "application document"}}</span>
+                                {% endif %}{% endfor %}
+                            </p>
+
+
+                            <p class="card-text"><small class="text-muted">
+                                    {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
+                                    {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
+                                    {% unless forloop.last %}<br>{% endunless %}
+                                    {% endif %}{% endif %}{% endfor %}
+                                </small>
+                            </p>
+                            <hr>
                             <a href="{{ c.website }}" class="btn btn-ponderosa-pine btn-round" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
-                    
+
                         </div>
                     </div>
                 </div>
