add collections modal

--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -22,7 +22,7 @@
                     <input type="text" class="form-control form-control-lg" id="search-all" placeholder="Find a collection" > 
                     <div class="input-group-append">
                         <button class="btn btn-clearwater" type="submit" title="Search" alt="Search" id="search-all-button" >Search</button>
-                        <button type="button" class="btn btn-secondary" data-backdrop="false">Browse</button>
+                        <button type="button" class="btn btn-secondary" data-backdrop="false" id="mobile-nav-image" data-toggle="modal" data-target="#collections">Browse</button>
                     </div>
                 </div>
             </div>
