index cards layout

--- a/_includes/js/cdil-js.html
+++ b/_includes/js/cdil-js.html
@@ -10,3 +10,5 @@
         cdilImage.innerHTML += card;
     }
 </script>
+
+<!--card = "<div class='col-md-10 my-3'><div class='card text-center border-secondary'><a href='#" + cdilItems[i].collapse + "' id='collapseOne' data-toggle='collapse' aria-expanded='false' aria-controls='" + cdilItems[i].collapse + "'><img class='card-img-top' src=" + cdilItems[i].image + " alt='Card image cap'><div class='highlight text-center py-2 px-2'>" + cdilItems[i].title + "</div></a><div class='collapse' id='" + cdilItems[i].collapse +"' aria-labelledby='collapseOne'><div class='card-body border-top'><p class='card-text'>" + cdilItems[i].description + "</p></div><div class='card-footer'><a href='" + cdilItems[i].website + "' class='btn btn-clearwater btn-round'>View Project</a></div></div></div></div>";-->
