--- a/_includes/js/campus-js.html
+++ b/_includes/js/campus-js.html
@@ -12,3 +12,5 @@
 </script>
 
 <!--<h5 class='card-title text-white text-center py-2'>" + campusItems[i].title + "</h5>-->
+
+<!--card = "<div class='col-md-10 my-3'><div class='card text-center border-secondary'><a href='#" + campusItems[i].collapse + "' id='collapseOne' data-toggle='collapse' aria-expanded='false' aria-controls='" + campusItems[i].collapse + "'><img class='card-img-top' src=" + campusItems[i].image + " alt='Card image cap'><div class='highlight text-center py-2 px-2'>" + campusItems[i].title + "</div></a><div class='collapse' id='" + campusItems[i].collapse +"' aria-labelledby='collapseOne'><div class='card-body border-top'><p class='card-text'>" + campusItems[i].description + "</p></div><div class='card-footer'><a href='" + campusItems[i].website + "' class='btn btn-clearwater btn-round'>View Project</a></div></div></div></div>";-->
