--- a/_includes/js/featured-js.html
+++ b/_includes/js/featured-js.html
@@ -16,3 +16,4 @@
 
 <!--card titles-->
 <!--<h5 class='card-title text-white text-center py-2'>" + featuredItems[i].title + "</h5>-->
+<!--image = "<div class='col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 my-3'><a href='" + featuredItems[i].website + "' data-toggle='tooltip' data-placement='bottom' title='" + featuredItems[i].description + "'><div class='card square' style='background-image: url(" + featuredItems[i].image + ")'><div class='highlight text-center py-2 px-2'>" + featuredItems[i].title + "</div></div></a></div>";-->
