add subjects page to nav

--- a/_layouts/subjects.html
+++ b/_layouts/subjects.html
@@ -1,7 +1,11 @@
 ---
-layout: page
+layout: default
 ---
 
-{{ content }}
+<div class="page-block">
+    <div class="container mt-4">
+        {{ content }}
 
-<div id="cloud" class="text-center my-4 bg-dark" ></div>
+        <div id="cloud" class="text-center my-4 bg-dark"></div>
+    </div>
+</div>
