center collection card titles

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -126,13 +126,11 @@ a {
     height: auto;
     width: 100%;
     color: #FFF;
-    top: 85px;
+    /*top: 85px;*/
     z-index: 1;
-    /*
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    */
 }
 
 /* footer */
