padding for subjects page

--- a/_layouts/subjects.html
+++ b/_layouts/subjects.html
@@ -4,8 +4,10 @@ layout: default
 
 <div class="page-block">
     <div class="container mt-4">
+        <div class="row py-5 mb-5">
         {{ content }}
 
         <div id="cloud" class="text-center my-4 bg-dark"></div>
+        </div>
     </div>
 </div>
