add footer content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,23 @@
-<!-- Footer -->
-<footer class="bg-dark pt-4">
-  <div class="container">
+<!-- Footer-->
 
-    <div class="row pb-4">
+<footer class="navbar nav-dark bg-dark mt-0 py-3 b-0">
+<div class="container">
+    <div class="col-md-4 mt-2 pl-4 align-self-center">
+      <a class="h2 text-white" href="{{ '/' | absolute_url }}">Digital Initiatives</a>
+    
+      <p class="text-white text-left"><small><a class="pride-gold" href="https://www.lib.uidaho.edu">University of Idaho Library</a> | <span class="pride-gold">Room 211</span></small>
+      <br>
+      <small><a class="pride-gold" href="mailto:omwikle@uidaho.edu">Email</a> | <span class="pride-gold">208-885-9444</span></small></p>
+        
+      
+    </div>
+    <div class="col-md-4 align-self-center text-center">
 
-      <div class="col-md-6 d-flex align-self-center">
-
-      </div>
-      <div class="col-md-6 d-flex justify-content-end align-self-center">
-          <a href="https://www.lib.uidaho.edu/"><img alt="Digital Initiatives" src="https://www.lib.uidaho.edu/media/digital/library_white.png" class="img-fluid lib-logo-lg"></a>
-      </div>
+    </div>
+    <div class="col-md-4 d-flex justify-content-end">
+        <a href="https://www.lib.uidaho.edu/"><img alt="Digital Initiatives" src="https://www.lib.uidaho.edu/media/digital/library_white.png" class="img-fluid lib-logo-lg"></a>
 
     </div>
   </div>
 </footer>
+  
