mobile padding fixes

--- a/_layouts/subjects.html
+++ b/_layouts/subjects.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="page-block">
     <div class="container mt-4">
-        <div class="row py-5 mb-5">
+        <div class="row py-5 mb-5 mx-2">
         {{ content }}
 
         <div id="cloud" class="text-center my-4 bg-dark"></div>
