--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     {% if page.url contains 'collections' %}
     <h3>Search:</h3>
     <hr>
-    <nav id="sidenav" class="pt-3">
+    <nav id="sidenav" class="pt-3 side-search">
         <ul class="list-unstyled components" id="accordion">
             <li class="border-bottom border-top py-2 pl-1 pr-4">
                 <a href="#locations" id="locationsOne" class="dropdown-toggle" data-toggle="collapse" aria-expanded="false" aria-controls="locations">Locations</a>
