--- a/_includes/index/campus-collections.html
+++ b/_includes/index/campus-collections.html
@@ -1,6 +1,5 @@
-<div class="row justify-content-center">
-    <h3>Campus Collections</h3>
-</div>
+<h2 class="mb-3">Campus Collections</h2>
+<hr class="w-50">
 <div class="row justify-content-center" id="campusInner">
 
 </div>
