--- a/_includes/index/featured-collections.html
+++ b/_includes/index/featured-collections.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-md-12 text-center">
-        <h3>Featured Collections</h3>
+        <h2>Featured Collections</h2>
+        <hr class="w-50">
     </div>
 </div>
 <div class="row" id="featuredInner"></div>
