--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -2,19 +2,54 @@
 layout: home
 ---
 
-<div class="row py-1">
-  <div class="col-md-12">
+<style>
+  .jumbotron-cdil {
+    background: url('https://www.voicesofgayrodeo.com/images/bg/bg005.jpg') no-repeat center;
+    background-size: cover;
+    height: 60vh;
+  }
+
+  body {
+    overflow-x: hidden;
+  }
+</style>
+
+<div class="row py-1 px-5">
+  <div class="col-md-12 px-5">
     {% include index/featured-collections.html %}
   </div>
 </div>
 
-<hr>
+<div class="pt-3 mt-4">
+  <div class="jumbotron jumbotron-fluid jumbotron-cdil" style="margin-bottom: 0">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 text-right text-white">
 
-<div class="row py-3">
-  <div class="col-md-6">
-    {% include index/campus-collections.html %}
+        </div>
+        <div class="col-md-6 text-white pr-5">
+          <div class="card bg-dark" style="opacity: .85">
+            <div class="card-text p-3">
+              <h1 class="display-3 text-right">CDIL</h1>
+              <p class="text-right">The University of Idaho's <a href="https://cdil.lib.uidaho.edu/" class="pride-gold">Center for Digital Inquiry and Learning</a> fosters collaborative digital scholarship across a variety of disciplines.
+              </p>
+              <p class="lead text-right">
+                Learn more about CDIL's: <br>
+                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-wild-rose mx-1 mt-2" role="button">Projects</a>
+                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-palouse-green mx-1 mt-2" role="button">Fellows</a>
+                <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Workshops</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
-  <div class="col-md-6">
-    {% include index/cdil-projects.html %}
+</div>
+
+<div class="row pb-3 pt-5 px-5 bg-light">
+  <div class="col-md-12 text-center">
+    {% include index/campus-collections.html %}
   </div>
 </div>
