center cdil card

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -21,7 +21,7 @@ layout: home
 </div>
 
 <div class="pt-3 mt-4">
-  <div class="jumbotron jumbotron-fluid jumbotron-cdil" style="margin-bottom: 0">
+  <div class="jumbotron jumbotron-fluid jumbotron-cdil d-flex align-items-center" style="margin-bottom: 0">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 text-right text-white">
