cdil with question mark

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -26,13 +26,13 @@ layout: home
         <div class="col-md-6 text-white pr-5">
           <div class="card bg-dark" style="opacity: .85">
             <div class="card-text p-3">
-              <h1 class="display-3 text-right">CDIL</h1>
+              <h1 class="display-3 text-right">CD?L</h1>
               <p class="text-right">The University of Idaho's <a href="https://cdil.lib.uidaho.edu/" class="pride-gold">Center for Digital Inquiry and Learning</a> fosters collaborative digital scholarship across a variety of disciplines.
               </p>
               <p class="lead text-right">
                 Learn more about CDIL's: <br>
-                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-wild-rose mx-1 mt-2" role="button">Projects</a>
-                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-palouse-green mx-1 mt-2" role="button">Fellows</a>
+                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Projects</a>
+                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Fellows</a>
                 <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Workshops</a>
               </p>
             </div>
